# SensorArray

./: .gitignore  LICENSE  requirements.txt
firmware/: .gitignore  .pylintrc  Makefile  micropy.json
firmware/keep/collectionStaticFiles/: index.html
firmware/keep/setupModeStatic/: index.html  main.js
firmware/package/: collectionMode.py  main.py  setupMode.py
firmware/package/dht11/: measure.py
firmware/package/wlan/: control.py
firmware/src/: boot.py  collectionMode.py  config.py  index.html  main.py  server.py  setupMode.py  util.py
firmware/src/collectionStaticFiles/: index.html  main.js
firmware/src/dht11/: measure.py
firmware/src/setupModeStatic/: index.html  main.js
firmware/src/setupStaticFiles/: index.html  main.js
firmware/src/wlan/: control.py
frontend/: package-lock.json  package.json
frontend/src/: Root.vue  main.ts  types.ts
frontend/src/router/: index.ts
frontend/src/services/: IsingleSensorData.ts  sensorList.ts  singleSensorData.ts
frontend/src/views/: sensorList.vue  (+1 more)
sensorApi/: .coveragerc  .flake8  .gitignore  manage.py  pyproject.toml  pytest.ini  requirements.txt
sensorApi/api/: models.py  serializers.py  urls.py  views.py
sensorApi/api/migrations/: 0001_initial.py  0002_auto_20200504_2110.py  0003_auto_20200504_2154.py  0004_auto_20200504_2224.py  0005_loggeddata_timestamp.py  0006_auto_20200508_0929.py  0007_auto_20200525_1123.py
sensorApi/api/test/: test_endpoint.py  test_unit.py
sensorApi/api/utils/: timestampDefaultValues.py
sensorApi/sensorApi/: asgi.py  settings.py  urls.py  wsgi.py
(+5 files in other folders)
