[tool.poetry]
name = "sensorapi"
version = "0.1.0"
description = ""
authors = ["\"Paweł Pankiewicz\""]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
rope = "^0.17.0"
black = "^19.10b0"
pytest-cov = "^2.9.0"
pytest-django = "^3.9.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
